--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@
 
 </head>
 <body>
-
-      <div class="site-skill-field container">
-        <div class="site-skill-item">grid 1</div>
-        <div class="site-skill-item">grid 2</div>
-        <div class="site-skill-item">grid 3</div>
-        <div class="site-skill-item">grid 4</div>
-        <div class="site-skill-item">grid 5</div>
-        <div class="site-skill-item">grid 6</div>
-        <div class="site-skill-item">grid 7</div>
-        <div class="site-skill-item">grid 8</div>
-        <div class="site-skill-item">grid 9</div>
-      </div>
+<div class="site-header-hero-wrapper">
+  <!-- SITE-HEADER -->
+  <header class="site-header">
+    <div class="site-header-container container">
+      <a class="site-header-logo-link" href="index.html">
+        <img class="site-header-logo-img" src="img/logo.svg" alt="CoffeeRoasters logo" width="235" height="24">
+      </a>
+  <!-- SITENAV -->
+      <nav class="sitenav">
+        <ul class="sitenav-list">
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Home</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">About</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Create your plan</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+</div>
 
 
   <script src="js/main.js"></script>
