--- a/index.html
+++ b/index.html
@@ -5,46 +5,88 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CoffeeRoasters</title>
-
+  
   <!-- STYLES -->
-
+  
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
-
-
+  
+  
 </head>
 <body>
-<div class="site-header-hero-wrapper">
-  <!-- SITE-HEADER -->
-  <header class="site-header">
-    <div class="site-header-container container">
-      <a class="site-header-logo-link" href="index.html">
-        <img class="site-header-logo-img" src="img/logo.svg" alt="CoffeeRoasters logo" width="235" height="24">
-      </a>
-  <!-- SITENAV -->
-      <nav class="sitenav">
-        <ul class="sitenav-list">
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Home</a></li>
-          <li class="sitenav-item"><a class="sitenav-link" href="#">About</a></li>
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Create your plan</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <!-- HERO -->
-  <div class="hero">
-    <div class="hero-container container">
-      <div class="hero-info-wrapper">
-        <h1 class="hero-heading">Good coffee is made simply</h1>
-        <div class="hero-text">Start your mornings with the world's best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</div>
-        <a class="button button-green" href="#">Create your plan</a>
+  <div class="site-header-hero-wrapper">
+    <!-- SITE-HEADER -->
+    <header class="site-header">
+      <div class="site-header-container container">
+        <a class="site-header-logo-link" href="index.html">
+          <img class="site-header-logo-img" src="img/logo.svg" alt="CoffeeRoasters logo" width="235" height="24">
+        </a>
+        <!-- SITENAV -->
+        <nav class="sitenav">
+          <ul class="sitenav-list">
+            <li class="sitenav-item"><a class="sitenav-link" href="#">Home</a></li>
+            <li class="sitenav-item"><a class="sitenav-link" href="#">About</a></li>
+            <li class="sitenav-item"><a class="sitenav-link" href="#">Create your plan</a></li>
+          </ul>
+        </nav>
       </div>
-      <img class="hero-img hero-img-index" src="img/index-hero-img.jpg" alt="Person's hand with iced coffee and cake on the table" width="710" height="696" srcset="img/index-hero-img.jpg 1x, img/index-hero-img@2x.jpg 2x">
+    </header>
+    <!-- HERO -->
+    <div class="hero">
+      <div class="hero-container container">
+        <div class="hero-info-wrapper">
+          <h1 class="hero-heading">Good coffee is made simply</h1>
+          <div class="hero-text">Start your mornings with the world's best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</div>
+          <a class="button button-green" href="#">Create your plan</a>
+        </div>
+        <img class="hero-img hero-img-index" src="img/index-hero-img.jpg" alt="Person's hand with iced coffee and cake on the table" width="710" height="696" srcset="img/index-hero-img.jpg 1x, img/index-hero-img@2x.jpg 2x">
+      </div>
     </div>
   </div>
-</div>
-
-
+  
+  <!-- MAIN-CONTENT -->
+  <main class="main-content">
+    <!-- INDEX-COLLECTION -->
+    <section class="index-collection">
+      <div class="container">
+        <div class="index-collection-inner">
+          <h2 class="index-collection-heading">Our collection</h2>
+          <ul class="index-collection-list">
+            <li class="index-collection-item">
+              <img class="index-collection-img" src="img/danche.png" alt="Danche" width="450" height="375" srcset="img/danche.png 1x, img/danche@2x.png 2x">
+              <div class="index-collection-info">
+                <h3 class="index-collection-title">Danche</h3>
+                <p class="index-collection-text">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+              </div>
+            </li>
+            <li class="index-collection-item">
+              <img class="index-collection-img" src="img/gran-espresso.png" alt="Gran Espresso" width="450" height="375" srcset="img/gran-espresso.png 1x, img/gran-espresso@2x.png 2x">
+              <div class="index-collection-info">
+                <h3 class="index-collection-title">Gran Espresso</h3>
+                <p class="index-collection-text">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+              </div>
+            </li>
+            <li class="index-collection-item">
+              <img class="index-collection-img" src="img/piccollo.png" alt="Piccollo" width="450" height="375" srcset="img/piccollo.png 1x, img/piccollo@2x.png 2x">
+              <div class="index-collection-info">
+                <h3 class="index-collection-title">Piccollo</h3>
+                <p class="index-collection-text">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+              </div>
+            </li>
+            <li class="index-collection-item">
+              <img class="index-collection-img" src="img/planalto.png" alt="Planalto" width="450" height="375" srcset="img/planalto.png 1x, img/planalto@2x.png 2x">
+              <div class="index-collection-info">
+                <h3 class="index-collection-title">Planalto</h3>
+                <p class="index-collection-text">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </main>
+  
+  
   <script src="js/main.js"></script>
 </body>
 </html>
