--- a/index.html
+++ b/index.html
@@ -83,6 +83,61 @@
           </ul>
         </div>
       </div>
+    </section>  
+    <!-- INDEX-FEATURES -->
+    <section class="index-features">
+      <div class="container">
+        <div class="index-features-inner">
+          <h2 class="index-features-heading">Why choose us?</h2>
+          <p class="index-features-lead">A large part of our role is choosing which particular coffees will be featured in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level</p>
+          <ul class="index-features-list">
+            <li class="index-features-item">
+              <img class="index-features-img" src="img/feature-quality-min.jpg" alt="Coffee factory worker smelling coffee beans" width="433" height="500" srcset="img/feature-quality-min.jpg 1x, img/feature-quality-min@2x.jpg 2x">
+              <h3 class="index-features-item-heading">Best quality</h3>
+              <p class="index-features-item-text">Discover an endless variety of the world's best artisan coffee from each of our roasters.</p>
+            </li>
+            <li class="index-features-item">
+              <img class="index-features-img" src="img/feature-exclusive-min.jpg" alt="Coffee being filtered into a glass pot" width="433" height="500" srcset="img/feature-exclusive-min.jpg 1x, img/feature-exclusive-min@2x.jpg 2x>
+              <h3 class="index-features-item-heading">Exclusive benefits</h3>
+              <p class="index-features-item-text">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+            </li>
+            <li class="index-features-item">
+              <img class="index-features-img" src="img/feature-free-shipping-min.jpg" alt="Coffee shop worker giving coffee to customer" width="433" height="500" srcset="img/feature-free-shipping-min.jpg 1x, img/feature-free-shipping-min@2x.jpg 2x">
+              <h3 class="index-features-item-heading">Free shipping</h3>
+              <p class="index-features-item-text">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+            </li> 
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- HOW-IT-WORKS -->
+    <section class="how-it-works">
+      <div class="container">
+        <div class="how-it-works-inner">
+          <h2 class="how-it-works-heading">How it works</h2>
+          <ol class="how-it-works-list">
+            <li class="how-it-works-item">
+              <div class="how-it-works-info">
+                <h3 class="how-it-works-step-title">Pick your coffee</h3>
+                <p class="how-it-works-text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+              </div>
+            </li>
+            <li class="how-it-works-item">
+              <div class="how-it-works-info">
+                <h3 class="how-it-works-step-title">Choose the frequency</h3>
+                <p class="how-it-works-text">Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.</p>
+              </div>
+            </li>
+            <li class="how-it-works-item">
+              <div class="how-it-works-info">
+                <h3 class="how-it-works-step-title">Receive and enjoy!</h3>
+                <p class="how-it-works-text">We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.</p>
+              </div>
+            </li>
+          </ol>
+        </div>
+        <a class="button button-brown" href="#">Create your plan</a>
+      </div>
     </section>
   </main>
   
