Add how-it-works section

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
               </div>
             </li>
           </ol>
+          <a class="how-it-works-cta button button-brown" href="#">Create your plan</a>
         </div>
-        <a class="button button-brown" href="#">Create your plan</a>
       </div>
     </section>
   </main>
